# PLD_COMP

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CODEOWNERS  Calc.h  Expr.g4  Expr.interp  Expr.tokens  ExprBaseVisitor.cpp  ExprBaseVisitor.h  ExprLexer.cpp  ExprLexer.h  ExprLexer.interp  ExprParser.cpp  ExprParser.h  ExprVisitor.cpp  ExprVisitor.h  README.md  main.cpp  main.s
antlr/: antlr4.sh  antlr_installer.sh
docs/: ErrorsAndWarnings.md  errors.md
grammar/: Expr.g4  Prog.g4
script/: compile.sh
src/: Affectation.cpp  Affectation.h  AppelFunction.cpp  AppelFunction.h  BasicBlock.cpp  BasicBlock.h  Bloc.cpp  Bloc.h  CFG.cpp  CFG.h  Calc.h  ControlFlowGraph.cpp  ControlFlowGraph.h  Declaration.cpp  Declaration.h  DeclarationTab.cpp  DeclarationTab.h  Else.cpp  Else.h  ErrorHandling.cpp  ErrorHandling.h  Expression.cpp  Expression.h  For.cpp  For.h  Function.cpp  Function.h  IR.cpp  IR.h  IRInstr.cpp  IRInstr.h  IRVariable.cpp  IRVariable.h  If.cpp  If.h  Initialisation.cpp  Initialisation.h  InitialisationTab.cpp  InitialisationTab.h  Instruction.cpp  (+21 more)
tests/: asm-test.sh  cli-test.sh  errors-test.sh  exec-test.sh  lint.sh  out.txt  output  symbols-test.sh  test-back.sh  test.sh
tests/ASM/: 00-basic.s  01-simpleDeclaration.s  02-putchar.s  03-multiple-func.s
tests/ASM/Back/: 1_decls.s  1_empty.s
tests/ASM/Custom/: 01-simple-func.s  27-putchar.s
tests/ASM/Front/: 01_SimpleDeclaration.s  03_OperatorPlus.s  04_OperatorMinus.s  05_OperatorDiv.s  06_OperatorMult.s  40_If.s  (+12 more)
tests/Custom/: 01-simple.c  02-simple-func-param.c  03-decl-func.c  04-multiple-decl.c  05-simple-func-bloc.c  06-simple-decl-func-bloc.c  07-simple-decl-func-bloc-mult.c  08-simple-func-param.c  09-simple-func-mult-param.c  10-decl-func-param-bloc.c  11-multiple-func.c  12-return-int32.c  13-return-int64.c  14-return-char.c  15-function-call.c  16-function-call-params.c  17-retour-name.c  18-retour-entier.c  19-retour-caractere.c  20-affectation-simple.c  21-affectation-variable.c  22-return-fun.c  23-multiple-decl-same-name.c  24-function-call-index.c  25-inc-dec.c  26-mult-init.c  27-putchar.c  28-equaltrue.c  29-equalfalse.c  30-notequaltrue.c  31-notequalfalse.c  32-lttrue.c  33-ltfalse.c  34-ltetrue.c  35-ltefalse.c  36-gttrue.c  37-gtfalse.c  38-gtetrue.c  39-gtefalse.c  39-ltefalse.c  (+15 more)
tests/Demo/: 5.11-Function-Call.c  5.13-Factorial-Complex-Program.c  5.15-6Parameters-Function-Call.c  5.2.1-int32-Declaration.c  5.2.2-int32-Declarations.c  5.2.3-int32-char-Declarations.c  5.2.4-char-mult.c  5.3.1-putchar.c  5.3.2-newline-putchar.c  5.4.1-int32-Affectations.c  5.4.2-int32-char-Affectations.c  5.4.3-Variables-Affectations.c  5.4.4-Variables-putchar-Affectations.c  5.5.1-Expressions.c  5.6.1-int-If-Else.c  5.6.2-Variable-If-Else.c  5.7.1-int-While.c  5.8.1-char-Value-Return.c  5.8.2-Variable-Value-Return.c  5.8.3-putchar-Value-Return.c
tests/UnitTests/: BlocTest.cpp  UnitTest.cpp
tests/lib/: assert.sh
(+107 files in other folders)
